# orbid

./: .gitignore  README.md
auction/: .dockerignore  Cargo.toml  Dockerfile
auction/core/: Cargo.toml
auction/core/src/: lib.rs
auction/core/tests/: vickrey.rs
auction/host/: Cargo.toml
auction/host/src/: main.rs
auction/methods/: Cargo.toml  build.rs
auction/methods/guest/: Cargo.toml
auction/methods/guest/src/: main.rs
auction/methods/src/: lib.rs
auction/server/: Cargo.toml
auction/server/src/: main.rs
frontend/: .env.example  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/auction/[id]/: page.tsx
frontend/app/create/: page.tsx
frontend/app/me/: page.tsx
frontend/components/: BidList.tsx  Copyable.tsx  DateTimePicker.tsx  Header.tsx  HeroOrbit.tsx  HowItWorks.tsx  InviteButton.tsx  LotCard.tsx  MiniOrbit.tsx  OrbitCountdown.tsx  OwnerRevealPanel.tsx  SealedBidForm.tsx  Select.tsx  SettledPanel.tsx  StatusChip.tsx  TamperProof.tsx  Toast.tsx
frontend/lib/: art.ts  auctionKey.ts  ecies.ts  format.ts  orbid.ts  risc0.ts  soroban.ts  tokens.ts  wallet.tsx
interop/: ecies.mjs  enc.mjs  encrypt.mjs  gen-owner-key.mjs  package.json  pnpm-lock.yaml  roundtrip-test.mjs
scripts/: e2e.sh  seed.sh
soroban/: deploy.sh  deployment.json
soroban/contracts/auction/: Cargo.toml
soroban/contracts/auction/src/: lib.rs  test.rs
soroban/contracts/auction/test_snapshots/test/: cannot_bid_after_deadline.1.json  cannot_finalize_before_deadline.1.json  double_bid_rejected.1.json  full_vickrey_flow.1.json  invalid_proof_reverts.1.json  lists_auctions_by_role.1.json  rebid_updates_in_place.1.json  winner_cannot_withdraw.1.json
soroban/contracts/nft/: Cargo.toml
soroban/contracts/nft/src/: lib.rs
soroban/contracts/token/: Cargo.toml
soroban/contracts/token/src/: lib.rs
