[package]
name = "auction-core"
version = "0.1.0"
edition = "2021"

[dependencies]
k256 = { version = "=0.13.3", default-features = false, features = ["arithmetic", "ecdsa"] }
hkdf = { version = "0.12", default-features = false }
sha2 = { version = "=0.10.8", default-features = false }
aes-gcm = { version = "0.10", default-features = false, features = ["aes", "alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }

[dev-dependencies]
hex = "0.4"
