[package]
name = "auction-guest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "auction"
path = "src/main.rs"

[workspace]

[dependencies]
risc0-zkvm = { version = "3.0", default-features = false, features = ["std", "unstable"] }
auction-core = { path = "../../core" }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }

# RISC Zero accelerator patches (k256 ECDH + sha2 HKDF run on precompiles).
# k256 acceleration requires the `unstable` feature on risc0-zkvm (above).
[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.3-risczero.1" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }
